syntax="proto3";

package user;

service UserService {
    rpc create (CreateUserDto) returns (LoginResponse);
    rpc signIn (LoginUserDto) returns (LoginResponse);
    rpc verifyToken (Token) returns (UserId);
}


message CreateUserDto{
    string email=1;
    string name=2;
    string password=3;
}

message LoginUserDto{
    string email=1;
    string password=2;
}


message LoginResponse{
    string accessToken=1;
    string refreshToken=2;
    User user=3;
}


message User{
    string _id=1;
    string email=2;
    string password=3;
    string name=4;
    string updatedAt = 5;
    string createdAt = 6;
    string lastLoginTime=7;
}

message Token{
    string accessToken=1;
}

message UserId{
    string id=1;
}


